# PyXComparer

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pyxcomparer.py  requirements.txt
src/pyxcomparer/: __init__.py  cli.py  comparator.py  config.py  converter.py  exceptions.py  reporter.py  word_converter.py
src/pyxcomparer/gui/: __init__.py  main_window.py
src/pyxcomparer/web/: app.py
tests/: test_comparator.py  test_converter.py
